--- a/views/admin/dashboard.ejs
+++ b/views/admin/dashboard.ejs
@@ -71,6 +71,10 @@
         <a href="/usuarios/" class="text-xl font-bold text-green-800 mb-2">👤 Usuarios</a>        
         <p class="text-green-700">Acesse, adicione ou delete um usuário.</p>
       </div>
+      <div class="bg-green-100 hover:bg-green-200 p-6 rounded-xl shadow-md transition duration-300 cursor-pointer">
+        <a href="/movimentacao/" class="text-xl font-bold text-green-800 mb-2">📊 Movimentações</a>
+        <p class="text-green-700">Registre entradas e saídas de estoque.</p>
+      </div>
     </div>
 
     <div class="mt-10 text-center">
