--- a/views/produtos/listar.ejs
+++ b/views/produtos/listar.ejs
@@ -1,14 +1,6 @@
 <%- include('../includes/header.ejs', { titulo: 'Lista de Produtos' }) %>
 
 <main class="p-6 min-h-screen">
-  <div class="flex justify-between items-center mb-6">
-    <a
-      href="/produtos/novo"
-      class="px-4 py-2 bg-green-600 text-white rounded-lg hover:bg-green-700 transition"
-    >
-      + Novo Produto
-    </a>
-  </div>
 
   <% if (produtos.length === 0) { %>
     <p class="text-gray-500 text-center mt-10">Nenhum produto cadastrado ainda.</p>
@@ -27,30 +19,40 @@
             </p>
           </div>
 
-          <div class="#1mjcm6l #16nef5u #t45iz0 #rpta5x">
+          <div class="mt-4 flex justify-end space-x-3"> 
             <a
               href="/produtos/<%= produto.id_produto %>/editar"
-              class="px-4 py-2 bg-green-600 text-white rounded-lg hover:bg-green-700 transition"
             >
-              Editar
+              <button type="submit"
+                      title="Editar categoria"
+                      class="bg-green-600 hover:bg-sucesso-700 p-2 rounded-full shadow flex items-center justify-center transition-transform hover:scale-110">
+              <img src="/img/edit.svg" alt="Editar" class="w-4 h-4 md:w-5 md:h-5">
+            </button>
             </a>
-
+            
             <form
               action="/produtos/<%= produto.id_produto %>/deletar"
               method="POST"
               onsubmit="return confirm('Tem certeza que deseja excluir este produto?')"
             >
-              <button
-                type="submit"
-                class="px-4 py-2 bg-red-600 text-white rounded-lg hover:bg-red-700 transition"
-              >
-              Excluir
+              <button type="submit" title="Excluir produto"
+                      class="bg-red-600 hover:bg-erro-700 text-white p-2 rounded-full shadow flex items-center justify-center transition-transform hover:scale-110">
+                <img src="/img/delete.svg" alt="Deletar" class="w-4 h-4 md:w-5 md:h-5">
               </button>
             </form>
           </div>
-        </div>
+          </div>
       <% } %>
     </div>
+            <a href="/produtos/novo" aria-label="Adicionar produto" title="Adicionar novo produto" class="fixed right-6 bottom-24 md:bottom-8 z-50
+            bg-green-500 w-14 h-14 rounded-full bg-gradient-to-b from-sistema-500 to-sistema-700 text-white
+            flex items-center justify-center shadow-lg
+            hover:shadow-xl hover:scale-110 transition-all duration-300
+            focus:outline-none focus:ring-4 focus:ring-white/50">
+          <svg xmlns="http://www.w3.org/2000/svg" class="w-7 h-7" viewBox="0 0 24 24" fill="currentColor">
+            <path d="M11 5a1 1 0 1 1 2 0v6h6a1 1 0 1 1 0 2h-6v6a1 1 0 1 1-2 0v-6H5a1 1 0 1 1 0-2h6V5z" />
+          </svg>
+        </a>
   <% } %>
 </main>
 
