--- a/views/admin/login.ejs
+++ b/views/admin/login.ejs
@@ -33,7 +33,6 @@
   }
 
 
-  /* Telas até 480px (smartphones normais) */
   @media (max-width: 480px) {
     .card-responsive {
       padding: 1.4rem !important;
@@ -44,7 +43,7 @@
     }
 
     img.h-36 {
-      height: 6rem !important; /* reduz para não estourar */
+      height: 6rem !important;
     }
 
     input {
@@ -58,7 +57,6 @@
     }
   }
 
-  /* Telas MUITO pequenas (até 380px) */
   @media (max-width: 380px) {
     .card-responsive {
       padding: 1.1rem !important;
